# mainthread

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  SPEC.md  VALIDATIONSPEC.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: changelog-check.yml  release.yml
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: AssistantBlock.tsx  ChatPanel.tsx  CommandPalette.tsx  CreateSubThreadModal.tsx  CreateThreadModal.tsx  ErrorBoundary.tsx  InlineQuestionBlock.tsx  InputModal.tsx  MessageBubble.tsx  MessageInput.tsx  PlanApprovalBlock.tsx  ProcessingBlock.tsx  QuestionModal.tsx  SettingsPanel.tsx  SpawnThreadBlock.tsx  StreamingCursor.tsx  SubthreadCompletionNotification.tsx  SystemStats.tsx  ThinkingBlock.tsx  ThreadCreatedNotification.tsx  ThreadHeader.tsx  ThreadMinimap.tsx  ThreadSidebar.tsx  Toggle.tsx  ToolHistoryBlock.tsx  ToolUseBlock.tsx  WelcomeModal.tsx
apps/web/src/constants/: animations.ts
apps/web/src/store/: settingsStore.ts  threadStore.test.ts  threadStore.ts  types.ts
apps/web/src/utils/: format.ts  formatToolInput.ts  paths.ts  toolPreviews.ts
docs/: QUICK_START.md  VALIDATION.md
docs/internal/: HANDOFF-batch5.md  PROMPT_ZERO.md  TODO.md
src/mainthread/: __init__.py  __main__.py  cli.py  db.py  server.py
src/mainthread/agents/: __init__.py  client_cache.py  core.py  registry.py  task_registry.py
src/mainthread/agents/tools/: __init__.py  archive_thread.py  list_threads.py  read_thread.py  send_to_thread.py  signal_status.py  spawn_thread.py
src/mainthread/static/: index.html
src/mainthread/static/assets/: index-1HxU1mTE.css  index-7cbvy4at.js  index-A25LLxmb.js  index-B286oVGr.js  index-B2tmKQuO.css  index-B3CQY3KI.css  index-B5ZBmoyJ.js  index-BCVKP5GG.css  index-BOSopPeC.js  (+53 more)
tests/: conftest.py  test_git_detection.py  test_streaming.py
